@@ -370,6 +370,7 @@ class MySQLDialect(ansisql.ANSIDialect):
         for match in re.finditer(fkpat, desc):
             columns = re.findall(r'`(.+?)`', match.group('columns'))
             refcols = [match.group('reftable') + "." + x for x in re.findall(r'`(.+?)`', match.group('refcols'))]
+            schema.Table(match.group('reftable'), table.metadata, autoload=True, autoload_with=connection)
             constraint = schema.ForeignKeyConstraint(columns, refcols, name=match.group('name'))
             table.append_item(constraint)
 
