@@ -3,6 +3,8 @@
 by not raising an error when redundant mappers were set up, fixed
 - added allow_null_pks option to Mapper, allows rows where some
 primary key columns are null (i.e. when mapping to outer joins etc)
+- fixed reflection of foreign keys to autoload the referenced table
+if it was not loaded already
 
 0.2.6
 - big overhaul to schema to allow truly composite primary and foreign
